---------------
Release: 0.7.12
---------------
Date: ???

^^^^^^^^^^^^^^^^^^^^
Changes since 0.7.11
^^^^^^^^^^^^^^^^^^^^

* Added method IPSet.iter_ipranges().


---------------
Release: 0.7.11
---------------
Date: 19th Mar 2014

^^^^^^^^^^^^^^^^^^^^
Changes since 0.7.10
^^^^^^^^^^^^^^^^^^^^

* Performance of IPSet increased dramatically, implemented by
    Stefan Nordhausen and Martijn van Oosterhout. As a side effect,
    IPSet(IPNetwork("10.0.0.0/8")) is now as fast as you'd expect.

* Various performance improvements all over the place.

* netaddr is now hosted on PyPI and can be installed via pip.

* Doing  "10.0.0.42" in IPNetwork("10.0.0.0/24")  works now.

* IPSet has two new methods: iscontiguous() and iprange(), thanks to Louis des Landes.

* Re-added the IPAddress.netmask_bits() method that was accidently removed.

* Networks 128.0.0.0/16, 191.255.0.0/16, and 223.255.255.0/24 are not marked as
    reserved IPv4 addresses any more. Thanks to marnickv for pointing that out.

* Various bug fixes contributed by Wilfred Hughes, 2*yo and Adam Goodman.

^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Specific bug fixes addressed in this release
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

FIXED Issue 58: https://github.com/drkjam/netaddr/issues/58

    - foo.bar doesn't throw AddrFormatError

FIXED Issue 57: https://github.com/drkjam/netaddr/issues/57

    - netaddr packages not hosted on PyPI

FIXED Issue 56: https://github.com/drkjam/netaddr/issues/56

    - Fix comparison with large IPSet()

FIXED Issue 55: https://github.com/drkjam/netaddr/pull/55

    - Fix smallest_matching_cidr and all_matching_cidrs

FIXED Issue 53: https://github.com/drkjam/netaddr/issues/53

    - Exclude 128.0.0.0/16 and possibly others from reserved range set?

FIXED Issue 51: https://github.com/drkjam/netaddr/issues/51

    - Encoding errors in netaddr/eui/oui.txt

FIXED Issue 46: https://github.com/drkjam/netaddr/issues/46

    - len(IPSet()) fails on python3
