@@ -259,6 +259,12 @@ class IPSet(object):
                 return True
         return False
 
+    def __nonzero__(self):
+        """Return True if IPSet contains at least one IP, else False"""
+        return bool(self._cidrs)
+
+    __bool__ = __nonzero__  #   Python 3.x.
+
     def __iter__(self):
         """
         :return: an iterator over the IP addresses within this IP set.
